appId: com.harry-expo.bluewallet
---
- stopApp
- openLink: exp+bluewallet://expo-development-client/?url=http://192.168.31.190:8081

- extendedWaitUntil:
    visible: Continue
    timeout: 33000

- runFlow:
    when:
      visible: Continue
    commands:
      - tapOn: Continue
      - tapOn:
          point: "50%,12%"

- waitForAnimationToEnd