appId: com.harry-expo.bluewallet
---
- runFlow:
    when:
      visible:
        id: "NotificationSettings"
    commands:
      - tapOn:
          id: "NotificationSettings"
      - tapOn:
          id: "NotificationsSwitch"
      - runFlow:
          when:
            visible: "Allow"
          commands:
            - tapOn: "Allow"
      - waitForAnimationToEnd:
          timeout: 200000
      - tapOn:
          id: "NotificationsSwitch"
          enabled: true
      - runFlow: "../helpers/go-back.yaml"
